--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -6,6 +6,7 @@ module:
   backup_migrate: 0
   better_exposed_filters: 0
   block: 0
+  block_class: 0
   block_content: 0
   breakpoint: 0
   chosen: 0
