--- a/config/sync/field.field.node.article.field_image.yml
+++ b/config/sync/field.field.node.article.field_image.yml
@@ -30,11 +30,11 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: ''
+    uuid: e49a21b7-f14e-4016-9f11-d7a5a7e2234a
     alt: ''
     title: ''
-    width: null
-    height: null
+    width: 700
+    height: 700
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
