--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.article.field_gallery_above_body
     - field.field.node.article.field_gallery_below_body
     - field.field.node.article.field_image
+    - field.field.node.article.field_main_image_teaser_only
     - field.field.node.article.field_new_par_various
     - field.field.node.article.field_new_txt_capt_main_img
     - field.field.node.article.field_tags
@@ -101,4 +102,5 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_main_image_teaser_only: true
   langcode: true
