Chosen für Filter Veranstaltungsart deaktiviert, Styling für die eingeblendeten Submit-Buttons

--- a/config/sync/user.role.chefredakteur.yml
+++ b/config/sync/user.role.chefredakteur.yml
@@ -16,6 +16,7 @@ permissions:
   - 'access toolbar'
   - 'access user profiles'
   - 'administer comments'
+  - 'administer entityconnect'
   - 'administer nodes'
   - 'administer webform submission'
   - 'bypass node access'
