Chosen für Filter Veranstaltungsart deaktiviert, Styling für die eingeblendeten Submit-Buttons

--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -53,7 +53,7 @@ filters:
     status: true
     weight: -50
     settings:
-      title: '1'
+      title: true
   filter_spamspan:
     id: filter_spamspan
     provider: spamspan
