--- a/config/sync/chosen.settings.yml
+++ b/config/sync/chosen.settings.yml
@@ -2,7 +2,7 @@ minimum_single: 20
 minimum_multiple: 5
 disable_search_threshold: 0
 minimum_width: 220
-jquery_selector: 'select#edit-field-event-type-target-id'
+jquery_selector: ''
 search_contains: false
 disable_search: false
 allow_single_deselect: false
@@ -12,9 +12,12 @@ no_results_text: 'Keine passenden Resultate'
 disabled_themes:
   bartik: '0'
   seven: '0'
-  hsk_zymphonies: '0'
   businessgroup_zymphonies_theme: '0'
+  hsk_zymphonies: '0'
+  seven_hsk: '0'
 chosen_include: 2
 _core:
   default_config_hash: JUHKHJeHl1bWXY41HMIcDR-VmAWvJ4OJycDubCkIeDU
 langcode: de
+max_shown_results: null
+use_relative_width: false
