--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,6 +1,6 @@
 module:
   admin_toolbar: 0
-  admin_toolbar_search: 0
+  admin_toolbar_links_access_filter: 0
   admin_toolbar_tools: 0
   allowed_formats: 0
   antibot: 0
