--- a/web/themes/businessgroup_zymphonies_theme/businessgroup_zymphonies_theme.info.yml
+++ b/web/themes/businessgroup_zymphonies_theme/businessgroup_zymphonies_theme.info.yml
@@ -7,24 +7,24 @@ base theme: classy
 
 #Libraries
 libraries:
-  - businessgroup_zymphonies_theme/bootstrap
+  #- businessgroup_zymphonies_theme/bootstrap
   - businessgroup_zymphonies_theme/global-components
 
 #Regions
 regions:
   header: 'Header'
   primary_menu: 'Primary Menu'
-  slideshow: 'Slideshow'  
+  slideshow: 'Slideshow'
   topwidget_first: 'Top First Widget'
   topwidget_second: 'Top Second Widget'
-  topwidget_third: 'Top Third Widget' 
-  highlighted: 'Highlighted' 
+  topwidget_third: 'Top Third Widget'
+  highlighted: 'Highlighted'
   page_title: 'Page Title'
   breadcrumb: 'Breadcrumb'
   search: 'Search'
   content: 'Content'
   sidebar_first: 'Left Sidebar'
-  sidebar_second: 'Right Sidebar'  
+  sidebar_second: 'Right Sidebar'
   bottom_first: 'Bottom First Widget'
   bottom_second: 'Bottom Second Widget'
   bottom_third: 'Bottom Third Widget'
