--- a/web/themes/businessgroup_zymphonies_theme/businessgroup_zymphonies_theme.libraries.yml
+++ b/web/themes/businessgroup_zymphonies_theme/businessgroup_zymphonies_theme.libraries.yml
@@ -1,16 +1,16 @@
-bootstrap:
-  version: 1.x
-  css:
-    theme:
-      includes/bootstrap/css/bootstrap.min.css: {}
-  #js:
-    #includes/bootstrap/js/bootstrap.min.js: {}
-  dependencies:
-    - core/jquery
-    - core/drupal.ajax
-    - core/drupal
-    - core/drupalSettings
-    - core/jquery.once
+#bootstrap:
+#  version: 1.x
+#  css:
+#    theme:
+#      includes/bootstrap/css/bootstrap.min.css: {}
+#  #js:
+#    #includes/bootstrap/js/bootstrap.min.js: {}
+#  dependencies:
+#    - core/jquery
+#    - core/drupal.ajax
+#    - core/drupal
+#    - core/drupalSettings
+#    - core/jquery.once
 
 global-components:
   Version: 1.x
