--- a/web/themes/hsk_zymphonies/hsk_zymphonies.info.yml
+++ b/web/themes/hsk_zymphonies/hsk_zymphonies.info.yml
@@ -2,7 +2,8 @@ name: HSK Theme
 description: HSK Theme basierend auf Businessgroup Zymphonies Theme
 type: theme
 core: 8.x
-base theme: businessgroup_zymphonies_theme
+#base theme: businessgroup_zymphonies_theme
+base theme: classy
 
 dependencies:
   - libraries
