--- a/config/sync/views.view.events_list.yml
+++ b/config/sync/views.view.events_list.yml
@@ -923,21 +923,19 @@ display:
             description: ''
             use_operator: false
             operator: field_event_type_target_id_op
-            operator_limit_selection: false
-            operator_list: {  }
             identifier: field_event_type_target_id
             required: false
             remember: false
-            multiple: false
+            multiple: true
             remember_roles:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
               redakteur: '0'
               chefredakteur: '0'
-              structure_admin: '0'
-              log_inspektor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -964,36 +962,36 @@ display:
       exposed_form:
         type: bef
         options:
-          submit_button: Filtern
-          reset_button: true
-          reset_button_label: Zurücksetzen
+          submit_button: Apply
+          reset_button: false
+          reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
+          input_required: false
           text_input_required: 'Wählen Sie eine beliebige Filter und klicken Sie auf Anwenden, um Ergebnisse zu sehen'
-          text_input_required_format: basic_html
           bef:
             general:
-              autosubmit: false
+              autosubmit: true
               autosubmit_exclude_textfield: false
-              autosubmit_textfield_delay: 500
               autosubmit_hide: true
               input_required: false
-              allow_secondary: false
-              secondary_label: 'Erweiterte Optionen'
-              secondary_open: false
               text_input_required: 'Wählen Sie eine beliebige Filter und klicken Sie auf Anwenden, um Ergebnisse zu sehen'
               text_input_required_format: basic_html
+              allow_secondary: false
+              secondary_label: 'Erweiterte Optionen'
             filter:
               field_event_type_target_id:
                 plugin_id: default
                 advanced:
-                  rewrite:
-                    filter_rewrite_values: ''
                   collapsible: false
                   is_secondary: false
-          input_required: false
+                  placeholder_text: ''
+                  rewrite:
+                    filter_rewrite_values: ''
+                  sort_options: false
+          text_input_required_format: basic_html
     cache_metadata:
       max-age: -1
       contexts:
