--- a/web/modules/contrib/hms_field/hms_field.info.yml
+++ b/web/modules/contrib/hms_field/hms_field.info.yml
@@ -7,7 +7,7 @@ dependencies:
   - field
 
 # Information added by Drupal.org packaging script on 2016-09-21
-version: '8.x-1.0-beta1'
-core: '8.x'
+version: '8.x-1.0-beta1-patched'
+core_version_requirement: ^8.8 || ^9
 project: 'hms_field'
 datestamp: 1474456740
