--- a/web/modules/contrib/node_class/node_class.info.yml
+++ b/web/modules/contrib/node_class/node_class.info.yml
@@ -1,4 +1,5 @@
 type: module
 name : Node class
 description : 'Adds classes specific to node.'
+version: '8.x-1.dev-patched'
 core_version_requirement: ^8.8 || ^9
