core_version_requirement für alle Custom Module und Themes

--- a/web/modules/custom/hsk_images/hsk_images.info.yml
+++ b/web/modules/custom/hsk_images/hsk_images.info.yml
@@ -1,7 +1,7 @@
 name: HSK Images
 description: Image-related functinality custom for HSK
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 version: VERSION
 dependencies:
   - drupal:image
