--- a/web/modules/custom/hsk_comments/hsk_comments.info.yml
+++ b/web/modules/custom/hsk_comments/hsk_comments.info.yml
@@ -1,7 +1,7 @@
 name: HSK Comments
 description: Design Comments and comment forms as we want them
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 package: HSK
 version: VERSION
 dependencies:
