--- a/web/themes/seven_hsk/seven_hsk.info.yml
+++ b/web/themes/seven_hsk/seven_hsk.info.yml
@@ -3,7 +3,7 @@ type: theme
 description: 'Modified Version of Seven Admin Theme'
 package: Core
 version: VERSION
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 base theme: seven
 
 libraries:
