--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/devel": "^4.1",
         "drupal/editor_file": "^1.5",
         "drupal/embed": "^1.4",
+        "drupal/entity_embed": "^1.1",
         "drupal/entityconnect": "^2.0@RC",
         "drupal/eu_cookie_compliance": "^1.14",
         "drupal/eva": "^2.1",
